Made the wpi-plumelib test remove a few more lines from expected/actual output that can vary between JDK versions.